--- a/SnakeTidy/SnakeTidy/SnakeTidy.csproj
+++ b/SnakeTidy/SnakeTidy/SnakeTidy.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{38AA0989-B4DD-4B6A-8DFB-B1543FF32B6A}</ProjectGuid>
+    <ProjectGuid>{6577883D-D9C3-4DA2-A6B7-7D5718636187}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SnakeImproved</RootNamespace>
-    <AssemblyName>SnakeImproved</AssemblyName>
+    <RootNamespace>SnakeTidy</RootNamespace>
+    <AssemblyName>SnakeTidy</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -44,15 +44,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Apple.cs" />
-    <Compile Include="GameBoard.cs" />
     <Compile Include="GameController.cs" />
-    <Compile Include="OldGC.cs" />
     <Compile Include="Point.cs" />
     <Compile Include="PointFactory.cs" />
     <Compile Include="Program.cs" />
-    <Compile Include="SnakePoint.cs" />
-    <Compile Include="SnakeImproved.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SnakePoint.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
